--- a/style.css
+++ b/style.css
@@ -7,149 +7,226 @@
   font-family: "Montserrat", sans-serif;
 }
 
-body{
-    padding: 10px;
+body {
+  padding: 10px;
 }
 
-header{
-    display: flex;
-    padding: 10px 30px;
-    align-items: center;
-    border-radius: 10px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    gap: 20px;
+header {
+  display: flex;
+  padding: 10px 30px;
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  gap: 20px;
 }
 
-header .logo{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-right: auto;
-    
+header .logo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-right: auto;
 }
 
-header img{
-    width: 40px;
-    height: 40px;
+header img {
+  width: 40px;
+  height: 40px;
 }
 
-header .user{
-    background-color: purple;
-    color: white;
-    width: 30px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
+header .user {
+  background-color: purple;
+  color: white;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
 }
 
-header .right-icons{
-    display: flex;
-    align-items: center;
-    gap: 20px;
+header .right-icons {
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
-header .menu{
-    display: none;
-
+header .menu {
+  display: none;
 }
 
-header .menu img{
-    width: 40px;
-    height: 40px;
+header .menu img {
+  width: 40px;
+  height: 40px;
 }
 
-header button{
-    background-color: rgb(231, 3, 3);
-    padding: 5px 20px;
-    border: none;
-    color: white;
-    border-radius: 5px;
+header button {
+  background-color: rgb(231, 3, 3);
+  padding: 5px 20px;
+  border: none;
+  color: white;
+  border-radius: 5px;
 }
 
-main{
-    padding: 20px;
+main {
+  padding: 20px;
+  display: flex;
+  gap: 20px;
 }
 
-main .grid{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
+main .grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
 }
 
-main .grid .card{
-    background-color: white;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    
+main .grid .card {
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
-main .grid .card .card-content{
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    height: 100%;
+main .grid .card:hover {
+  transform: scale(1.03);
+  box-shadow: rgba(149, 157, 165, 0.4) 0px 8px 24px;
+  transition: all 300ms ease-in-out;
 }
 
-main .grid .card-image{
-    position: relative;
-
-}  
-
-main .grid .card-image .text{
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 5px;
+main .grid .card .card-content {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: 100%;
 }
 
-main .grid .card-image .text p{
-    font-size: 10px;
+main .grid .card .card-content h1 {
+  font-size: 24px;
 }
 
-
-main .grid .card-image img{
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+main .grid .card .card-content p,
+.hashtags {
+  font-size: 10px;
 }
 
-.like{
-    margin-top: auto;
-    display: flex;
-    align-items: center;
+main .grid .card-image {
+  position: relative;
 }
 
-.like img{
-    width: 20px;
+main .grid .card-image .text {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+main .grid .card-image .text p {
+  font-size: 12px;
+}
+
+main .grid .card-image img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.like {
+  margin-top: auto;
+  display: flex;
+  align-items: center;
+}
+
+.like img {
+  width: 20px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  max-width: 400px;
+}
+
+form > div {
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 15px;
+  border-radius: 10px;
+}
+
+form input,
+textarea {
+  padding: 10px;
+}
+
+form .file {
+  padding: 0;
+}
+
+form h2 {
+  font-size: 16px;
+  text-align: center;
+}
+
+form .page {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+form .page div {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+form button {
+  background-color: blue;
+  border: none;
+  color: white;
+  padding: 5px 0;
+  border-radius: 5px;
+}
+
+form .clear {
+  background-color: red;
+}
+
+form .page div:hover {
+  background-color: rgba(149, 157, 165, 0.2);
+  transition: all 200ms ease-in-out;
 }
 
 @media only screen and (max-width: 769px) {
-    main .grid{
-        grid-template-columns: repeat(2, 1fr);
-    }
+  main .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  main {
     
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 @media only screen and (max-width: 426px) {
-    main .grid{
-        grid-template-columns: repeat(1, 1fr);
-    }
-    header .right-icons{
-        display: none;
-    }
+  main .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  header .right-icons {
+    display: none;
+  }
 
-    header .menu{
-        display: block;
-    }
-    
+  header .menu {
+    display: block;
+  }
 }
-
